<resources>
    <string name="app_name">Fragment_Task_ALerDialog</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name">Name</string>
    <string name="mail">Mail</string>
    <string name="todo">Todo</string>

    <string name="emp_name">Empname</string>
    <string name="emp_mail">Empmailid</string>
    <string name="emp_address">Empaddress</string>
    <string name="emp_mobile">Empmobile</string>
    <string name="emp_desg">Empdesg</string>

</resources>