<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/relative_layout"
        android:background="@drawable/recangle"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/custom_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/custom_MailId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/custom_name"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/mail"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/next_arrow"
            android:layout_width="57dp"
            android:layout_height="52dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_arrow_right_24" />
    </RelativeLayout>

</LinearLayout>