<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_two"
    tools:context=".Fragment_Two">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_margin="10dp"
        android:id="@+id/back_arrow"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/alertdialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:backgroundTint="@color/teal_200"
        android:background="@drawable/recangle"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="201dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:text="@string/emp_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:id="@+id/fragment_emp_name"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="201dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:text="@string/emp_mail"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:id="@+id/fragment_emp_mail"

                android:text=""
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="201dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:text="@string/emp_address"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:id="@+id/fragment_emp_address"

                android:text=""
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="201dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:text="@string/emp_mobile"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:id="@+id/fragment_emp_mobilr"

                android:text=""
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="207dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:text="@string/emp_desg"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:text=""
                android:textColor="@color/black"
                android:id="@+id/fragment_emp_designation"

                android:textSize="20sp"
                android:textStyle="normal" />

        </LinearLayout>

    </LinearLayout>



</FrameLayout>